# bicklebow

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  bicklebow.db  setup.cfg
api/: requirements.txt
api/src/: bot.py  config.py  database.py  schemas.py  tinkoff.py  triggers.py  utils.py
api/src/analytics/: forecast.py  portfolio.py
api/src/interaction/: keyboards.py
bot/: Cargo.toml  README.md
bot/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
configs/: .development.env  .testing.env
data/: markets.txt
data/candles/: BBG000BFL116-1h.txt  BBG000N9MNX3-1h.txt  BBG005MX5GZ2-1h.txt  BBG006G2JVL2-1h.txt  BBG007KC7PB0-1h.txt
lib/: Cargo.toml
lib/src/: config.rs  lib.rs
lib/src/data/: markets.txt
lib/src/database/: mocks.rs  mod.rs  queries.rs  utils.rs
lib/src/database/models/: markets.rs  metrics.rs  mod.rs
lib/src/database/sql/: markets.sql  metrics.sql
lib/src/filters/: filters.rs  mod.rs
lib/src/reactions/: reactions.rs
lib/src/rules/: rules.rs
lib/src/sources/: ggdrive.rs  mod.rs  sources.rs  tinkoff.rs  utils.rs
src/: config.rs  main.rs
src/database/: mocks.rs  models.rs  queries.rs  utils.rs
src/database/sql/: markets.sql  metrics.sql  news.sql
src/filters/: filters.rs
src/reactions/: mod.rs  reactions.rs
src/rules/: rules.rs
src/sources/: sources.rs
tests/: conftest.py
tests/api/: test_schemas.py  test_utils.py
