[package]
name = "bicklebow-lib"
version = "0.1.0"
authors = ["Aleksey Bondarev <a.bondarev.it@gmail.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4"
tinkoff-invest = "0.15.1"
tokio = { version = "1.17.0", features = ["full"] }
async-trait = "0.1.52"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]

[dev-dependencies]
serial_test = "*"